# kasra-sdk

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
config/: default.yaml  override.yaml
integration_tests/: __init__.py  test_full_stack.py
rules/: _code-review-rules.json  _cve-data.json  input-rules.json  output-rules.json
src/kasra/: __init__.py  __main__.py  cli.py
src/kasra/actions/: __init__.py  base.py  block.py  clean.py  dynamic.py  redact.py  soft_allow.py  truncate.py  warn.py
src/kasra/analyzers/: __init__.py  base.py  code_block_analyzer.py  context.py  context_analyzer.py  correlator.py  data_flow_analyzer.py  external_client.py  language_detector.py  language_specific.py  luhn_validator.py  semgrep_adapter.py
src/kasra/audit/: __init__.py  exporters.py  formatters.py  logger.py
src/kasra/config/: __init__.py  global_config.py  loader.py
src/kasra/context/: __init__.py  buffer.py
src/kasra/core/: __init__.py  engine.py  pipeline.py  registry.py  runner.py
src/kasra/exceptions/: __init__.py  errors.py
src/kasra/hooks/: __init__.py  base.py  builtin.py  registry.py
src/kasra/matchers/: __init__.py  base.py  composite_matcher.py  entropy_matcher.py  keyword_matcher.py  regex_matcher.py
src/kasra/models/: __init__.py  context.py  enums.py  events.py  result.py  rule.py
src/kasra/pipeline/: __init__.py  batch_pipeline.py  behavior_pipeline.py  input_pipeline.py  output_pipeline.py
src/kasra/preprocessing/: __init__.py  chunker.py  normalizer.py
src/kasra/rules/: __init__.py  loader.py  store.py
src/kasra/rules/checks/: __init__.py
src/kasra/scanner/: __init__.py  checkers.py  incremental.py  models.py  scanner.py
src/kasra/utils/: __init__.py  imports.py  package.py  severity.py  text.py  time.py
tests/: cr_rules_data.py  io_rules_data.json  io_rules_data.py  test_actions.py  test_analyzers.py  test_audit.py  test_integration.py  test_matchers.py  test_misc.py  test_models.py  test_pipelines.py  test_rules.py  test_scanner.py  test_utils.py
