[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kasra-sdk"
version = "0.3.0"
description = "Kasra Rule Engine — AI Development Security Governance + Code Repo Security Review. Content detection engine for LLM input/output safety, credential leak prevention, PII redaction, code security, compliance, and SAST code review."
readme = "README.md"
license = { text = "Proprietary — Internal Use Only" }
authors = [
    { name = "Kasra AI Security", email = "dev@kasra.security" },
]
keywords = [
    "llm-security", "prompt-injection", "ai-governance", "pii-detection",
    "credential-leak", "code-security", "supply-chain", "compliance",
    "rule-engine", "security-engine", "sast", "code-review", "static-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "ahocorasick-rs>=0.22",
    "charset-normalizer>=3.0",
    "orjson>=3.9",
    "semgrep>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.3",
]

[project.urls]
Homepage = "https://github.com/your-org/kasra-sdk"
Documentation = "https://github.com/your-org/kasra-sdk/docs/API.md"

[project.scripts]
kasra-scan = "kasra.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kasra"]

[tool.hatch.build.targets.wheel.force-include]
"config" = "kasra/_config"
"rules" = "kasra/_rules"

[tool.hatch.build.targets.sdist]
include = ["src/kasra/**"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
